opam-version: "1.2"
maintainer: "dave@recoil.org"
authors: ["David Scott"]
license: "ISC"
homepage: "https://github.com/djs55/ocaml-osx-dnssd"
dev-repo: "https://github.com/djs55/ocaml-osx-dnssd.git"
bug-reports: "https://github.com/djs55/ocaml-osx-dnssd/issues"
tags: [
  "org:mirage"
]

build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-j" jobs]
]

depends: [
  "dns"
  "lwt"
  "logs"
  "fmt"
  "jbuilder" {build & >= "1.0+beta10"}
  "alcotest" {test}
]

available: [ocaml-version >= "4.03.0"]
