opam-version: "1.2"
maintainer: "dave@recoil.org"
authors: ["David Scott" "Thomas Gazagnaire"]
license: "ISC"
homepage: "https://github.com/mirage/ocaml-osx-dnssd"
dev-repo: "https://github.com/mirage/ocaml-osx-dnssd.git"
bug-reports: "https://github.com/mirage/ocaml-osx-dnssd/issues"
doc: "https://mirage.github.io/ocaml-osx-dnssd/"
tags: [
  "org:mirage"
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: [
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dns"
  "lwt"
  "logs"
  "fmt"
  "cstruct" {>= "2.3.0"}
  "dune" {build}
  "alcotest" {test}
]

available: [ocaml-version >= "4.03.0"]
