opam-version: "2.0"
maintainer: "dave@recoil.org"
authors: ["David Scott" "Thomas Gazagnaire"]
license: "ISC"
homepage: "https://github.com/mirage/ocaml-osx-dnssd"
dev-repo: "git+https://github.com/mirage/ocaml-osx-dnssd.git"
bug-reports: "https://github.com/mirage/ocaml-osx-dnssd/issues"
doc: "https://mirage.github.io/ocaml-osx-dnssd/"
tags: [
  "org:mirage"
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dns"
  "lwt"
  "logs"
  "fmt"
  "cstruct" {>= "2.3.0"}
  "dune"
  "alcotest" {with-test}
]

synopsis: "DNS resolution for macOS"
description: """
Bindings to the
[DNSServiceRef](https://developer.apple.com/documentation/dnssd/dnsserviceref?language=objc)
APIs on macOS which use the system's DNS resolver. This allows you to perform
DNS queries using exactly the same logic as macOS, including respecting VPN
policy."""
